Made ConfigScreen have defaults, made defaults more robust, and added an error message if the config file is corrupt